--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,16 @@ spring.jpa.properties.hibernate.format_sql= true
 server.error.include-binding-errors=always
 server.error.include-message=always
 
-backendapi.app.jwtSecret:schoolmanagementproject
-backendapi.app.jwtExpressionMs:86400000
+backendapi.app.jwtSecret: schoolmanagementproject
+backendapi.app.jwtExpressionMS:86400000
+
+midterm.exam.impact.percentage = 0.40
+final.exam.impact.percentage = 0.60
+
+
+
+
+
 
 
 
